--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <h1 class="text-center" id="heading">UT Hyper Train</h1>
           <p class="pull-right" id="currentTime"></p>
         </div>
-    
+    <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-9">
+          <div class="col-sm-12 col-md-12">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title">Train Schedule</h3>
@@ -52,8 +52,10 @@
               </div>
             </div>
           </div>
-    
-          <div class="col-xs-12 col-sm-3">
+    </div>
+
+    <div class="row">
+          <div class="col-sm-12 col-md-12">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title">Add New Train</h3>
@@ -84,6 +86,8 @@
               </div>
             </div>
           </div>
+    </div>
+
         </div>
       </div>
 
